--- a/home.html
+++ b/home.html
@@ -1,3 +1,15 @@
-<h1> This is our Home page </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1> This is our Home page </h1>
 
 <h2>This is the second Header</h2>
+</body>
+</html>
+
