--- a/home.html
+++ b/home.html
@@ -12,6 +12,10 @@
 <h2>This is the second Header</h2>
 
 <button>Submit</button>
+
+<div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, odio.</p>
+</div>
 </body>
 </html>
 
